--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   </div>
   <div class="grid"></div>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://anseki.github.io/plain-draggable/plain-draggable.min.js"></script>
+  <script src="plain-draggable/plain-draggable.min.js"></script>
   <script>
     $(function() {
       new PlainDraggable('.card', { handle: '.handle', snap: false });
