--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" http-equiv="Permissions-Policy" content="interest-cohort=(self)">
   <title>PlainDraggable Example</title>
   <style>
     body {
