--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="Permissions-Policy" content="interest-cohort=(self)">
+  <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+  
   <title>PlainDraggable Example</title>
   <style>
     body {
