--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <p>Department</p>
   </div>
   <div class="grid"></div>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
   <script src="plain-draggable/plain-draggable.min.js"></script>
   <script>
 $(document).ready(function() {
