--- a/index.html
+++ b/index.html
@@ -74,6 +74,17 @@
   </style>
 </head>
 <body>
+  <div class="col">
+
+    <div id="ex-050-stage" class="stage-m">
+      <div id="ex-050-draggable" class="draggable cat" style="will-change: transform; -webkit-tap-highlight-color: transparent; box-shadow: transparent 0px 0px 1px; cursor: grab; user-select: none; transform: translate(-20.707px, 36.5781px);">Drag This</div>
+      <div id="ex-050-stage-in">
+        <div id="ex-050-draggable-in" class="draggable cat" style="will-change: transform; -webkit-tap-highlight-color: transparent; box-shadow: transparent 0px 0px 1px; cursor: grab; user-select: none; transform: translate(0px, 0px);">Drag This</div>
+      </div>
+    </div>
+    
+      </div>
+  
   <div class="card">
     <div class="handle"></div>
     <h3>Name</h3>
