--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
-
+	<script src="plain-draggable/plain-draggable.min.js"></script>
   <title>PlainDraggable Example</title>
   <style>
     body {
