--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="card">
     <div class="handle"></div>
-    <h3>Name</h3>
+    <p>Full name</h3>
     <p>Title</p>
     <p>Department</p>
   </div>
