--- a/index.html
+++ b/index.html
@@ -1,24 +1,66 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
-	<script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
-	<script src="plain-draggable/plain-draggable.min.js"></script>
-	<script src="script.js"></script>
-	<link rel="stylesheet" type="text/css" href="style.css">
-  <title>PlainDraggable Example</title>
-  
-</head>
-<body>
-  <div class="card">
-    <div class="handle"></div>
-    <p>Full name</h3>
-    <p>Title</p>
-    <p>Department</p>
-  </div>
-  <div class="grid"></div>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>PIRV-Tool</title>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
 
+  <body>
+    <section class="column-container">
+      <div class="person-column" id="level-1">
+        <h3>Level 1</h3>
+        <hr class="custom-hr" />
+        <div class="person-list"></div>
+      </div>
 
-</body>
+      <div class="person-column" id="level-2">
+        <h3>Level 2</h3>
+        <hr class="custom-hr" />
+        <div class="person-list"></div>
+      </div>
+
+      <div class="person-column" id="level-3">
+        <h3>Level 3</h3>
+        <hr class="custom-hr" />
+        <div class="person-list"></div>
+      </div>
+
+      <div class="person-column" id="level-4">
+        <h3>Level 4</h3>
+        <hr class="custom-hr" />
+        <div class="person-list"></div>
+      </div>
+    </section>
+
+    <footer>
+      <div class="info-container">
+        <h1>PIRV-Tool</h1>
+        <p>
+          Add people and move them around by dragging and dropping.
+        </p>
+      </div>
+
+      <form class="input-container">
+        <div class="fields">
+          <div class="fields-left">
+            <input id="name" placeholder="name..." />
+            <input id="title" placeholder="title..." />
+            <input id="department" placeholder="department..." />
+          </div>
+
+          <div class="fields-right">
+            <input id="resposibilites" placeholder="resposibilites..." />
+          </div>
+
+          <input type="submit" id="submit-button" />
+        </div>
+      </form>
+    </footer>
+
+    <div class="error-container"></div>
+
+    <script src="js/app.js"></script>
+  </body>
 </html>
